# Aegis

./: .gitignore  README.md  aegis_cli.py  pyproject.toml  pytest.ini  test_aegis.py  test_nikto_wrapper_direct.py
aegis_pentest/: __init__.py  __main__.py  main.py  test_installer.py
aegis_pentest/cli/: __init__.py  display.py  interactive.py  main_cli.py
aegis_pentest/core/: __init__.py  project_manager.py  report_generator.py  scanner.py
aegis_pentest/docs/: INSTALLER.md
aegis_pentest/gui/: __init__.py  main_window.py
aegis_pentest/tools/: __init__.py  apache_vuln_wrapper.py  censys_wrapper.py  cloudsploit_wrapper.py  ffuf_wrapper.py  gobuster_wrapper.py  nginxpwner_wrapper.py  nikto_wrapper.py  nmap_wrapper.py  nuclei_wrapper.py  shodan_wrapper.py  sqlmap_wrapper.py  ssl_analyzer.py  traceroute_wrapper.py  w3af_wrapper.py  zaproxy_wrapper.py
aegis_pentest/utils/: __init__.py  config.py  helpers.py  installer.py  logger.py  privilege_manager.py  process_runner.py
logs/: README.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli_workflows.py
tests/installation/: __init__.py  test_installation.py
tests/integration/: __init__.py  test_scanner_integration.py
tests/performance/: __init__.py  test_performance.py
tests/scripts/: run_all_tests.py  run_tests.py
tests/unit/: __init__.py  test_config.py  test_tools.py
