[tool.poetry]
name = "aegis-pentest-automation"
version = "1.0.0"
description = "Automatización de pentesting web con GUI Qt - Wrapper de herramientas de seguridad"
authors = ["Aegis Security <aegis@security.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aegis_pentest"}]

[tool.poetry.dependencies]
python = "^3.9"
python-nmap = "^0.7.1"
pyyaml = "^6.0.1"
requests = "^2.31.0"
rich = "^13.7.0"
inquirer = "^3.2.0"
tabulate = "^0.9.0"
prompt-toolkit = "^3.0.43"
beautifulsoup4 = "^4.12.2"
colorama = "^0.4.6"
python-docx = "^1.1.0"
jinja2 = "^3.1.2"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aegis = "aegis_cli:main" 